--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,9 @@
   font-size: $fontSize;
 }
 
+@import './menu';
 @import './project-list';
+@import './hero-bg-canvas';
 
 * {
   -webkit-font-smoothing: antialiased;
