--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>stilva – Thomas Ansart</title>
+	<% if(false) { %><title>stilva – Thomas Ansart</title><% } %>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
 	<meta name="description" content="stilva – Thomas Ansart">
 	<meta name="msapplication-TileColor" content="#000">
