swipe left/right transition

--- a/src/styles/_project-list.scss
+++ b/src/styles/_project-list.scss
@@ -31,6 +31,7 @@
     line-height: .8em;
     margin-top: 1.4rem;
     position: relative;
+    text-decoration: none;
     transition-duration: 250ms;
     transition-property: transform;
     transition-timing-function: ease-out;
