--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,12 +31,14 @@ body {
 .home {
   align-items: center;
   bottom: 0;
+  contain: content;
   display: flex;
   flex-direction: column;
   justify-content: center;
   left: 0;
   position: absolute;
   right: 0;
+  transform: translate3d(0,0,0);
   top: 0;
   z-index: 0;
 }
