added wip mobile menu

--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -1,4 +1,9 @@
 .project {
+  padding-top: 15vw;
+
+  @media #{$tablet-large} {
+    padding-top: 80px;
+  }
 
   &__canvas-wrapper {
     align-items: center;
