--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -1,4 +1,5 @@
 $mobile-medium: "screen and (min-width : 320px)";
 $mobile-large: "screen and (min-width : 375px)";
 $tablet: "screen and (min-width : 425px)";
+$tablet-large: "screen and (min-width : 640px)";
 $laptop: "screen and (min-width : 768px)";
