--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -75,6 +75,46 @@
   right: 1.5rem;
   top: calc(1.5rem - 10px);
   z-index: 4;
+
+  &-background {
+    position: absolute;
+    top: 0;
+    z-index: 10;
+  }
+
+  &-close {
+    position: absolute;
+    top: calc(1.5rem - 10px);
+    right: 1.5rem;
+    z-index: 12;
+  }
+}
+
+.menu--mobile {
+  list-style: none;
+  margin: 0;
+  opacity: 1;
+  padding: 10vw;
+  position: relative;
+  z-index: 11;
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  li {
+    display: inline-block;
+    overflow: hidden;
+  }
+
+  a {
+    @include font-regular(6vw);
+    display: block;
+    color: white;
+    position: relative;
+    text-decoration: none;
+  }
 }
 
 .menu__wrapper {
