--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<% if(false) { %><title>stilva – Thomas Ansart</title><% } %>
+	<title>stilva – Thomas Ansart</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
 	<meta name="description" content="stilva – Thomas Ansart">
 	<meta name="msapplication-TileColor" content="#000">
@@ -11,13 +11,16 @@
 	<meta name="application-name" content="stilva.com">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="theme-color" content="#000">
+	<% if(typeof rendered !== "undefined") { %>
+		<link rel="stylesheet" href="/styles.css" type="text/css" />
+	<% } %>
 </head>
 <body>
-	<script type="text/javascript">
-		window.ssrData = <% if(typeof ssrData !== "undefined") { %><%- JSON.stringify(ssrData) %><% } else { %>null<% } %>;
-	</script>
 	<div id="app">
 		<% if (typeof rendered !== "undefined") { %><%- rendered %><% } %>
 	</div>
+	<% if(typeof rendered !== "undefined") { %>
+		<script src="/bundle.js"></script>
+	<% } %>
 </body>
 </html>
