--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -2,10 +2,18 @@
   background: black;
   padding: 4.8vw 11.2vw 20vw;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 
   @media #{$laptop} {
     padding: 36px 86px 128px;
+  }
+
+  &.page--entering {
+    @include page-transition-in(home-animation);
+  }
+
+  &.page--exiting {
+    @include page-transition-out(home-animation);
   }
 
   a {
@@ -39,6 +47,11 @@
       margin-top: 60px;
     }
   }
+}
+
+@keyframes home-animation {
+  from { transform: translateX(-100%); }
+  to { transform: translateX(0); }
 }
 
 .home__animated-word {
