--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -1,37 +1,13 @@
 .page {
+  display: block;
   overflow: auto;
-}
-
-.page--entered .content {
-  animation: fade-in 550ms 0ms ease-out forwards;
+  height: 100vh;
 }
 
 .page--entering {
-  opacity: 0;
-}
-
-.page--entered,
-.page--entering {
-  z-index: 3;
-}
-
-.page--exiting {
+  bottom: 0;
   left: 0;
   position: absolute;
+  right: 0;
   top: 0;
-  z-index: 1;
-}
-
-.page--exited {
-  display: none;
-  opacity: 0;
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0
-  }
-  to {
-    opacity: 1
-  }
 }
