--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>stilva – Thomas Ansart</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="stilva – Thomas Ansart">
 	<meta name="msapplication-TileColor" content="#000">
 	<meta name="apple-mobile-web-app-capable" content="yes">
