--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@ $client-background-colour: #f1f1f1;
 @import './page';
 
 @import './picture';
+@import './video';
 @import './built-in';
 @import './awards';
 
