--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,10 +9,9 @@ $client-background-colour: #f1f1f1;
 @import './client';
 @import './page';
 
+@import './paragraph';
 @import './picture';
 @import './video';
-@import './built-in';
-@import './awards';
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -22,6 +21,7 @@ $client-background-colour: #f1f1f1;
 html, body {
   background: $client-background-colour;
   margin: 0;
+  padding: 0;
   width: 100vw;
 }
 
