--- a/src/styles/_paragraph.scss
+++ b/src/styles/_paragraph.scss
@@ -1,4 +1,5 @@
-.blob {
+.blob,
+.markdown {
   font-size: 6.5vw;
   padding: 1.6vw 0.6vw;
 
@@ -7,12 +8,30 @@
     margin: 0;
   }
 
-  p {
+  a, p {
     @include font-light(14px);
+    color: black;
     letter-spacing: -0.03vw;
     line-height: 1.5;
     margin: .5em 0 1em;
     word-spacing: 0.05vw;
+  }
+
+  a {
+    display: inline-block;
+    position: relative;
+    margin: 0;
+  }
+
+  a:after {
+    background: black;
+    bottom: -1px;
+    content: '';
+    height: 1px;
+    left: 0;
+    position: absolute;
+    right: 0;
+    width: 100%;
   }
 }
 
