--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,7 @@ $client-background-colour: #f1f1f1;
 
 * {
   -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
   box-sizing: border-box;
 }
 
