tweaked title component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@ $client-background-colour: #f1f1f1;
 @import './page';
 
 @import './paragraph';
+@import './title';
 @import './picture';
 @import './video';
 @import './code';
