enabling code splitting for prismjs

--- a/src/styles/_code.scss
+++ b/src/styles/_code.scss
@@ -1,7 +1,12 @@
-code {
-  white-space: pre-wrap;
+.markdown {
+  code {
+    display: block;
+    font-size: 12px;
+    line-height: 1.75 !important;
+    white-space: pre-wrap !important;
 
-  .token.operator {
-    background: transparent;
+    .token.operator {
+      background: transparent;
+    }
   }
 }
