moving away from react-router/reach-router

--- a/src/styles/_client.scss
+++ b/src/styles/_client.scss
@@ -2,6 +2,7 @@
   background: $client-background-colour;
   color: black;
   margin: 0 auto;
+  min-height: 100vh;
   padding: 86px 11vw 12vw;
   position: relative;
   z-index: 1;
