--- a/src/styles/_lab.scss
+++ b/src/styles/_lab.scss
@@ -4,3 +4,20 @@
     max-width: 70vw;
   }
 }
+
+.stayyyyyyyyyyyyyy {
+
+  &.page--entering {
+  }
+
+  &.page--exiting {
+    /*background: red;
+    opacity: .5;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;*/
+  }
+}
