--- a/src/styles/_paragraph.scss
+++ b/src/styles/_paragraph.scss
@@ -19,8 +19,9 @@
 
   a {
     display: inline-block;
-    position: relative;
     margin: 0;
+    position: relative;
+    text-decoration: none;
   }
 
   a:after {
