--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,8 +1,9 @@
 .home {
-  background: black;
+  //background: black;
+  border: 1px solid pink;
   padding: 86px 11vw 12vw;
   position: relative;
-  z-index: 2;
+  //z-index: 2;
 
   @media #{$laptop} {
     padding: 86px 86px 86px;
@@ -41,6 +42,27 @@
   p:first-of-type {
     margin-top: 0;
   }
+}
+
+.home .content {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+
+.home__background {
+  bottom: 0;
+  display: block;
+  height: 100vh;
+  left: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  opacity: 1;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100vw;
+  z-index: 0;
 }
 
 .home__animated-word {
