--- a/src/styles/_category-link.scss
+++ b/src/styles/_category-link.scss
@@ -3,7 +3,22 @@ a.category-link__wrapper {
   display: block;
   margin-bottom: 1rem;
   position: relative;
+
+  &:hover {
+    .category-link__text {
+      color: white;
+
+      .animated {
+        //transform: translateX(0);
+      }
+    }
+  }
 }
+
+// linear:: cubic-bezier(0,0,0,0)
+// ease out:: cubic-bezier(0,0,.58,1)
+// ease in:: cubic-bezier(.42,0,0,0)
+// ease in-out:: cubic-bezier(.42,0,.58,1)
 
 .category-link {
   @include font-rl;
@@ -20,14 +35,15 @@ a.category-link__wrapper {
     transition: color 250ms ease-out;
     z-index: 1;
 
-    &:after {
+    .animated {
       background: black;
       content: "";
       height: 100%;
       left: 0;
+      //opacity: .5;
       position: absolute;
       transform: translateX(-105%);
-      transition: transform 250ms ease-out;
+      //transition: transform 250ms cubic-bezier(0,0,.58,1);
       top: 0;
       width: 100%;
       z-index: -1;
@@ -42,7 +58,7 @@ a.category-link__wrapper {
     left: 0;
     position: absolute;
     transform: translateX(-105%);
-    transition: transform 250ms ease-out;
+    //transition: transform 250ms cubic-bezier(0,0,.58,1);
     width: 100%;
 
     @media #{$tablet-large} {
@@ -50,17 +66,7 @@ a.category-link__wrapper {
     }
 
     .visible & {
-      transform: translateX(0);
-    }
-  }
-
-  &:hover {
-    .category-link__text {
-      color: white;
-
-      &:after {
-        transform: translateX(0);
-      }
+      //transform: translateX(0);
     }
   }
 }
