--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -40,19 +40,19 @@
 }
 
 .page--rl.page--entering .content {
-  animation: 850ms animation-rl cubic-bezier(.6,0,.4,1) both;
+  animation: 850ms animation-rl cubic-bezier(.73,0,.51,.99) both;
 }
 
 .page--rl.page--exiting .content {
-  animation: animation-rl-out 550ms ease-out 250ms both;
+  animation: animation-rl-out 850ms cubic-bezier(.73,0,.51,.99) 0ms both;
 }
 
 .page--lr.page--entering .content {
-  animation: 850ms animation-lr cubic-bezier(.6,0,.4,1) both;
+  animation: 850ms animation-lr cubic-bezier(.73,0,.51,.99) both;
 }
 
 .page--lr.page--exiting .content {
-  animation: animation-lr-out 550ms ease-out 250ms both;
+  animation: animation-lr-out 850ms cubic-bezier(.73,0,.51,.99) 0ms both;
 }
 
 @keyframes fade-in {
