--- a/src/styles/_category-link.scss
+++ b/src/styles/_category-link.scss
@@ -40,10 +40,8 @@ a.category-link__wrapper {
       content: "";
       height: 100%;
       left: 0;
-      //opacity: .5;
       position: absolute;
       transform: translateX(-105%);
-      //transition: transform 250ms cubic-bezier(0,0,.58,1);
       top: 0;
       width: 100%;
       z-index: -1;
@@ -66,7 +64,7 @@ a.category-link__wrapper {
     }
 
     .visible & {
-      //transform: translateX(0);
+      transform: translateX(0);
     }
   }
 }
