--- a/src/styles/_paragraph.scss
+++ b/src/styles/_paragraph.scss
@@ -22,7 +22,7 @@
   }
 
   a {
-    box-shadow: black 0 1px 0;
+    border-bottom: 1px solid black;
     display: inline;
     margin: 0;
     position: relative;
