--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300');
 
-$client-background-colour: #f1f1f1;
+$background-colour: #f1f1f1;
 
 @import './media-queries';
 @import './mixins';
 
 @import './page';
 @import './home';
-@import './client';
+@import './work';
 @import './lab';
 
 @import './paragraph';
@@ -25,7 +25,7 @@ $client-background-colour: #f1f1f1;
 }
 
 html, body {
-  background: $client-background-colour;
+  background: $background-colour;
   margin: 0;
   overflow-x: hidden;
   padding: 0;
