--- a/src/styles/_paragraph.scss
+++ b/src/styles/_paragraph.scss
@@ -21,6 +21,10 @@
     word-spacing: 0.05vw;
   }
 
+  p:last-of-type {
+    margin-bottom: 0;
+  }
+
   a {
     border-bottom: 1px solid black;
     display: inline;
@@ -51,6 +55,10 @@
       }
     }
   }
+}
+
+.markdown ~ .markdown {
+  padding-top: 0;
 }
 
 .built-in {
