--- a/src/styles/_paragraph.scss
+++ b/src/styles/_paragraph.scss
@@ -34,10 +34,11 @@
   }
 
   ul {
+    display: block;
     list-style-type: none;
     line-height: 2;
     margin: 0;
-    padding: 0;
+    padding: 12px 0 0;
 
     li {
       @include font-light(14px);
