Fixes bundles. Minor Spring animation lab tweaks

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap');
 
 $background-colour: #f1f1f1;
 
