refactors heaps of stuff

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" />
 	<title>stilva – Thomas Ansart</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="stilva – Thomas Ansart">
-	<meta name="msapplication-TileColor" content="#000">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name="application-name" content="stilva.com">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="theme-color" content="#000">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="stilva – Thomas Ansart" />
+	<meta name="msapplication-TileColor" content="#000" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<meta name="application-name" content="stilva.com" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="theme-color" content="#000" />
 	<% if(typeof rendered !== "undefined") { %>
 		<link rel="stylesheet" href="/styles.css" type="text/css" />
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-19518429-1"></script>
