--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,50 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap');
 
-$background-colour: #f1f1f1;
-
-@import './media-queries';
-@import './mixins';
-
-@import './page';
-@import './home';
-@import './work';
-@import './lab';
-
-@import './paragraph';
-@import './title';
-@import './picture';
-@import './video';
-@import './code';
-
-@import './category-link';
-
 * {
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: transparent;
   box-sizing: border-box;
 }
 
+:root {
+  --page-transition-duration: 850ms;
+
+  @media screen and (min-width : 640px) {
+    --page-transition-duration: 1050ms;
+  }
+}
+
 html, body {
-  background: $background-colour;
+  background: #f1f1f1;
+  font-family: 'Roboto Mono', monospace;
   margin: 0;
   overflow-x: hidden;
   padding: 0;
   width: 100vw;
-}
-
-.content {
-  margin: 0 auto;
-  max-width: 100%;
-
-  @media #{$tablet} {
-    max-width: 80vw;
-  }
-
-  @media #{$tablet-large} {
-    max-width: 70vw;
-  }
-
-  @media #{$laptop} {
-    max-width: 960px;
-  }
 }
