--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,7 +12,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="theme-color" content="#000" />
 	<% if(typeof rendered !== "undefined") { %>
-		<link rel="stylesheet" href="/styles.css" type="text/css" />
+		<link rel="stylesheet" href="/styles.[hash].css" type="text/css" />
 	<% } %>
 </head>
 <body>
@@ -20,7 +20,7 @@
 		<% if (typeof rendered !== "undefined") { %><%- rendered %><% } %>
 	</div>
 	<% if(typeof rendered !== "undefined") { %>
-		<script src="/bundle.js"></script>
+		<script src="/bundle.[hash].js"></script>
 	<% } %>
 </body>
 </html>
